# msp-map-editor

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/actions/: build.yml
.github/workflows/: build.yml
assets/: README.txt  camera.blend  icons-LICENSE.txt  podium.blend
src/: assets.rs  culling.rs  docking.rs  load_file.rs  main.rs  mesh.rs  open_file.rs  schema.rs  shortcuts.rs  sync.rs  tile_range.rs  ui.rs  utils.rs  viewport.rs
src/assets/: camera.glb  missing_skybox.ktx2
src/assets/icons/: icons-LICENSE.txt
src/assets/objects/: camera.glb  gold_pipe.glb  key_gate.glb  podium.glb  silver_star.glb  star.glb
