[package]
name = "msp-map-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-panic-handler = "6.0.0"
bevy_file_dialog = "0.9.0"
bevy_map_camera = "0.5.0"
bevy_mod_imgui = { version = "0.8.0", features = ["docking"] }
directories = "6.0.0"
enum-map = { version = "2.7.3", features = ["serde"] }
grid = "1.0.0"
imgui = "0.12.0"
itertools = "0.14.0"
monostate = "1.0.2"
native-dialog = { version = "0.9.4", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
strum = { version = "0.27.2", features = ["derive"] }
transform-gizmo-bevy = { git = "https://github.com/pindash-io/transform-gizmo", branch = "bevy-0.17", version = "0.7.0" }

[profile.dev.package."*"]
opt-level = 3
